--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/CSCI370-Group-6/webhost#readme",
   "dependencies": {
+    "axios": "^1.6.8",
     "body-parser": "^1.20.2",
     "child_process": "^1.0.2",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2"
   }
 }
